--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "vite",
+  "name": "vite-ejs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && html-beautify dist/**/*.html && esbuild src/public/assets/js/*.js --bundle --minify --outdir=dist/assets/js/",
+    "build": "vite build && html-beautify html/**/*.html && esbuild src/public/assets/js/*.js --bundle --minify --outdir=dist/assets/js/",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "css-declaration-sorter": "^6.3.1",
     "js-beautify": "^1.14.7",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.24",
     "postcss-normalize-charset": "^5.1.0",
-    "postcss-sort-media-queries": "^4.3.0",
+    "postcss-sort-media-queries": "^4.4.1",
+    "postcss-url": "^10.1.3",
     "sass": "^1.57.1",
     "vite": "^4.0.0",
-    "vite-plugin-handlebars": "^1.6.0"
+    "vite-plugin-ejs": "^1.6.4"
+  },
+  "dependencies": {
+    "glob": "^10.3.1",
+    "vite-plugin-live-reload": "^3.0.2"
   }
 }
